sandbox-codebase/objects/heymarket__Send_Notifications_Event__e/heymarket__Send_Notifications_Event__e.object-meta.xml
<CustomObject>
    <label>Send Notification Event</label>
    <pluralLabel>Send Notifications Event</pluralLabel>
</CustomObject>