sandbox-codebase/objects/heymarket__Send_Notifications_Event__e/fields/heymarket__Message_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Message_Id__c</fullName>
    <label>Message Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>