sandbox-codebase/objects/heymarket__Send_Notifications_Event__e/fields/heymarket__Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>