sandbox-codebase/objects/heymarket__Send_Notifications_Event__e/fields/heymarket__Salesforce_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Salesforce_Record_ID__c</fullName>
    <label>Salesforce Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>